Fix layout shifts

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    min-height: 69px;
     @media screen and (max-width: 768px) {
         padding: 15px 0px;
     }
